# Heimdall

./: .gitignore  README.md  andvari_blocked_or_denied_sonar_projects.csv  andvari_invocation_blocked_or_denied.ipynb  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: andvari_proxy_infra.md
examples/: heimdall-worker.service  pipeline.example.yaml  pipeline.local.yaml  pipeline.vps.yaml  worker.example.yaml
exports/heimdall-analysis-20260520T070212Z/: README.md  manifest.json
exports/heimdall-analysis-20260520T070212Z/tables/: kvasir.jsonl  mimir.csv  runs.csv  (+1 more)
exports/heimdall-analysis-20260520T203812Z/: README.md  andvari_manifest.json  manifest.json
proxy/: README.md  andvari-blocked-egress-logger.service  andvari-egress-firewall.service  andvari-egress-firewall.sh  apply_andvari_proxy_vps_changes.sh  create_andvari_intercept_cert.sh  validate_andvari_proxy_vps.sh
scripts/: backfill_sonar_project_metrics.py  backfill_sonar_resubmissions.py  reconcile_sonar_follow_up.py  recover_manual_sonar_submissions.py  resubmit_missing_sonar.py  retry_lidskjalv_current_batch.py  retry_lidskjalv_latest_run.py
src/heimdall/: __init__.py  __main__.py  adapters.py  andvari_proxy.py  cli.py  execution.py  images.py  manifest.py  models.py  provider_runtime.py  reporting.py  runner.py  simpleyaml.py  smoke.py  sonar_follow_up.py  state.py  utils.py
tests/: format.sh  helpers.py  lint.sh  precommit.sh  run.sh  test_adapters.py  test_andvari_proxy.py  test_eitri_container_smoke.sh  test_export_analysis_bundle.py  test_manifest.py  test_pipeline_smoke.py  test_provider_runtime.py  test_queue.py  test_reconcile_sonar_follow_up.py  test_retry_lidskjalv_current_batch.py  test_retry_lidskjalv_latest_run.py  test_runner.py  test_simpleyaml.py  test_smoke.py  test_sonar_follow_up.py  test_sonar_resubmission_scripts.py  typecheck.sh
tests/fakes/: claude  codex  docker
(+12 files in other folders)
