[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heimdall"
version = "0.1.0"
description = "Local-first Docker CLI orchestrator for the pipeline services"
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
  { name = "Seidr Edu" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
orchestrator = "heimdall.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
